[package]
name = "session"
version = "2.0.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = "0.22.0"
rand = "0.7.3"
tokio = "0.2.13"
mysql_common = "0.20.1"
